--- a/frontend/home.html
+++ b/frontend/home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VIKRANTA - Government Tourist Registry System</title>
+    <link rel="icon" type="image/png" href="logo.png">
     <link rel="stylesheet" href="css/style.css">
     <style>
         /* Additional styles specific to home page */
@@ -480,7 +481,7 @@
                 <a href="portal.html" class="btn btn-primary">
                     <span>📋</span> Official Portal
                 </a>
-                <a href="#" class="btn btn-secondary">
+                <a href="https://thorough-reflection-production-1bb6.up.railway.app/" class="btn btn-secondary">
                     <span>🔐</span> Tourist Login
                 </a>
             </div>
@@ -583,7 +584,7 @@
                 <div style="font-size: 0.8rem; font-weight: 400; margin-top: 8px; opacity: 0.9;">Register & Login</div>
             </a>
             
-            <a href="#" class="action-btn-large official-btn-large">
+            <a href="https://thorough-reflection-production-1bb6.up.railway.app/" class="action-btn-large official-btn-large">
                 <div class="action-btn-icon-large">💼</div>
                 <div>Tourist</div>
                 <div style="font-size: 0.8rem; font-weight: 400; margin-top: 8px; opacity: 0.9;">Official Access</div>
@@ -611,7 +612,7 @@
                     <a href="#about">About System</a>
                     <a href="#features">Features</a>
                     <a href="portal.html">Official Portal</a>
-                    <a href="#">Tourist Login</a>
+                    <a href="https://thorough-reflection-production-1bb6.up.railway.app/">Tourist Login</a>
                 </div>
                 
                 <div class="footer-column">
